syntax = "proto3";
package waves.grpc;
option java_package = "com.wavesplatform.api.grpc";
option csharp_namespace = "Waves.Grpc";

import "block.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

service BlocksApi {
    rpc GetBlock (BlockRequest) returns (BlockWithHeight);
    rpc GetBlockRange (BlockRangeRequest) returns (stream BlockWithHeight);
    rpc GetCurrentHeight (google.protobuf.Empty) returns (google.protobuf.UInt32Value);
}

message BlockRequest {
    oneof request {
        bytes block_id = 1;
        int32 height = 2;
        bytes reference = 3;
    }

    bool include_transactions = 100;
}

message BlockRangeRequest {
    uint32 from_height = 1;
    uint32 to_height = 2;
    oneof filter {
        bytes generator = 3;
    }

    bool include_transactions = 100;
}

message BlockWithHeight {
    waves.Block block = 1;
    uint32 height = 2;
}
